# material-decoration

./: ...  .gitignore  .gitmodules  Button.cc  CMakeLists.txt  README.md
.github/workflows/: archlinux-force-x11-smoke.yml  code-review.yml  force-x11-smoke.yml  gemini-code-review-2.yml  gemini-code-review.yml  jules-code-review.yml  openai-code-review.yml  review-guide.txt  ubuntu-force-x11-smoke.yml
po/: CMakeLists.txt  materialdecoration.pot
po/de/: materialdecoration.po
po/es/: materialdecoration.po
po/fr/: materialdecoration.po
po/it/: materialdecoration.po
po/nl/: materialdecoration.po
po/zh_CN/: materialdecoration.po
src/: .AppMenuButtonGroup.cc.kate-swp  AppIconButton.h  AppIconButton.h.new  AppMenuButton.cc  AppMenuButton.h  AppMenuButtonGroup.cc  AppMenuButtonGroup.cc.nuovo  AppMenuButtonGroup.cc_copy  AppMenuButtonGroup.h  AppMenuButtonGroup.h.old  AppMenuModel.cc  AppMenuModel.h  ApplicationMenuButton.h  BoxShadowHelper.cc  BoxShadowHelper.h  BuildConfig.h.cmake  Button.cc  Button.h  CMakeLists.txt  CloseButton.h  ContextHelpButton.h  Decoration.cc  Decoration.h  Decoration_.cc  ExcludeFromCaptureButton.h  IconProvider.cc  IconProvider.h  InternalSettingsSchema.kcfg  KeepAboveButton.h  KeepBelowButton.h  Material.h  MaximizeButton.h  MenuOverflowButton.cc  MenuOverflowButton.h  MinimizeButton.h  NavigableMenu.cc  NavigableMenu.h  OnAllDesktopsButton.h  SearchButton.cc  SearchButton.h  (+4 more)
src/kcm/: AppMenuButtonGroup.h  CMakeLists.txt  config.ui  config.ui.old  kcm.cpp  kcm.h  materialdecoration-kcm.json  materialdecoration_kcm.desktop  materialdecoration_kcm.json
src/libdbusmenuqt/: AppMenuButtonGroup.h  CMakeLists.txt  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusmenushortcut_p.cpp  dbusmenutypes_p.cpp  utils.cpp  utils_p.h
test_app/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  propertydialog.cpp  propertydialog.h
